<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mathemagic</string>
    <string name="action_problem">Problem</string>
    <string name="action_icon">Icon</string>
    <string name="action_count">Count</string>
    <string name="action_result">Result</string>
    <string name="introduction_text">Select correct result!</string>

    <string name="icon_aquarium">Aquarium</string>
    <string name="icon_flowers">Flowers</string>
    <string name="icon_cupcakes">Cupcakes</string>
    <string name="icon_baloons">Baloons</string>
    
    <string name="image_with_items">Items</string>
    
    <string name="count_question">3 + 2 = ?</string>
    <string name="count_plus">+</string>
    <string name="count_minus">-</string>
    <string name="count_count">Count</string>
    <string name="count_continue">Continue</string>
    
    <string name="number_OK">OK</string>
    <string name="number_Clear">Clear</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    
    
    <string name="result_button_congratulations">Start again</string>
    <string name="result_button_sorry">Back to count</string>
    <string name="result_congratulations">Congratulations! You\'re right!</string>
    <string name="result_sorry">Sorry! Try again!</string>
    
    
</resources>